--- a/index.css
+++ b/index.css
@@ -178,6 +178,19 @@ footer nav a {
     width: 100%;
 }
 
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: #fff2e6;
+}
+
+::-webkit-scrollbar-thumb {
+    background: var(--color-primary);
+    border-radius: 30px;
+}
+
 /* UTILITARIOS */
 
 .mt-1 {
