--- a/landing-page02/components/images/landing-page-tutorial-main/index.html
+++ b/landing-page02/components/images/landing-page-tutorial-main/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="styles/fonts.css">
-    <link rel="stylesheet" href="styles/media.css">
+    <link href="/styles/style.css" rel="stylesheet">
+    <link href="/styles/fonts.css" rel="stylesheet">
+    <link href="/styles/media.css" rel="stylesheet">
     <title>Landing Page</title>
 </head>
 <body>
@@ -15,22 +15,23 @@
             <h1>Marketing</h1>
             <h1>Criativo</h1>
         </div>
-        
+
         <ul>
             <a href="#"><li>Início</li></a>
             <a href="#"><li>Serviços</li></a>
             <a href="#"><li>Sobre</li></a>
             <a href="#"><li>Contato</li></a>
-            <a href="#" id="inscreva-btn"><li>Já tem uma conta?</li></a>
+            <a href="#" id="inscreva-se-btn"><li>Já tem uma conta?</li></a>
         </ul>
     </header>
 
     <main>
         <aside>
             <h2><span>Inscreva-se agora</span></h2>
-            <h2>na Newsletter</h2>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-
+            <h2>na Newslatter</h2>
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+            </p>
             <form>
                 <input type="text" placeholder="Nome">
                 <input type="email" placeholder="E-mail">
@@ -39,10 +40,9 @@
         </aside>
 
         <article>
-            <img src="components/images/77d0a7c454e658833800528e748edbe9.png" alt="mulher-roxa">
+            <img src="./components/images/77d0a7c454e658833800528e748edbe9.png" alt="mulher-roxa">
         </article>
     </main>
-
-    <footer></footer>
+    
 </body>
 </html>
