--- a/landing-page02/components/images/landing-page-tutorial-main/styles/style.css
+++ b/landing-page02/components/images/landing-page-tutorial-main/styles/style.css
@@ -1,108 +1,101 @@
-body {
+body{
     background-color: rgb(34, 34, 34);
-    color: #fff;
-    font-family: poppinsRegular;
+    color: white;
+    font-family: poppinsregular;
     max-width: 1200px;
     margin: 0 auto;
     padding: 15px;
 }
 
-header {
+header{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
 }
 
-#title {
+#title{
     flex-direction: column;
     line-height: 10px;
 }
 
-li {
+li{
     display: inline-block;
     margin: 20px;
 }
 
-a {
-    color: #fff;
+a{
+    color: white;
 }
 
-a:hover {
+a:hover{
     color: rgb(132, 14, 201);
-    transition: .3s all;
+    transition: 0.3s all;
 }
 
-#inscreva-btn {
+#inscreva-se-btn{
     border: 2px solid rgb(132, 14, 201);
     padding: 10px;
     border-radius: 15px;
 }
 
-#inscreva-btn:hover {
+#inscreva-se-btn:hover{
     background-color: rgb(132, 14, 201);
-    color: #fff;
+    color: white;
 }
 
-h1 {
+h1{
     font-weight: 200;
 }
 
-main {
+main{
     display: flex;
     flex-direction: row;
     margin-top: 50px;
 }
 
-h2 {
+h2{
     font-size: 56px;
     line-height: 10px;
     font-family: poppinsmedium;
 }
 
-span {
+span{
     color: rgb(132, 14, 201);
 }
 
-p {
+p{
     line-height: 20px;
     max-width: 500px;
     font-family: poppinslight;
 }
 
-img {
+img{
     width: 580px;
 }
 
-form {
+form{
     display: flex;
     flex-direction: column;
     width: 70%;
 }
 
-input {
-    margin-top: 20px;
-    height: 20px;
-    padding: 15px;
-    border-radius: 15px;
-    border: none;
-    font-size: 15px;
-}
-
-input:focus-visible {
-    outline: 3px solid rgb(132, 14, 201);
-}
-
-form [type="submit"] {
+form [type="submit"]{
     height: 50px;
     width: 50%;
     background-color: rgb(132, 14, 201);
-    color: #fff;
+    color: white;
     font-weight: bold;
+}
+form [type="submit"]:hover{
     cursor: pointer;
 }
 
-form [type="submit"]:hover {
-    background-color: rgb(155, 83, 197);
-    transition: .3s all;
+input{
+    margin-top: 20px;
+    height: 20px;
+    padding: 15px;
+    border-radius: 20px;
+    border: none;
+    font-size: 15px;
 }
